changed Locale.of() to new Locale()